# Popular-Women

./: .gitignore  build.sh  procfile.txt  render.yaml  requirements.txt
tutor_selfedu/: build.sh  db.sqlite3  manage.py  pyproject.toml
tutor_selfedu/tutor_selfedu/: asgi.py  settings.py  urls.py  wsgi.py
tutor_selfedu/women/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
tutor_selfedu/women/migrations/: 0001_initial.py  0002_women_views.py
tutor_selfedu/women/static/css/: admin.css
tutor_selfedu/women/templates/women/: about.html  addpage.html  base.html  contact.html  index.html  list_categories.html  list_menu.html  list_posts.html  login.html  post.html  register.html
tutor_selfedu/women/templatetags/: women_tags.py
